修正编译报错